<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Biko</string>
    <string name="breeds_title">Raças de cães</string>

    <string name="breed_empty">Nenhuma raça disponível :(</string>
    <string name="breed_failed">Uma falha inesperada aconteceu =/, toque aqui para tentar novamente </string>
    <string name="title_activity_login">ACTIVITYMAINS</string>
    <string name="seja_bem_vindo">Seja bem vindo ao App</string>
    <string name="email_or_user">Usuário ou Email</string>
    <string name="senha">Senha</string>
    <string name="action">Action</string>
    <string name="entrar">Login</string>
    <string name="ok">OK</string>
    <string name="validacao">Validação</string>
    <string name="informe_o_usuario">Informe o usuário</string>
    <string name="informe_a_senha">Informe a senha</string>
    <string name="acessando_o_sistema">Acessando o sistema</string>
    <string name="aguarde">Aguarde</string>
    <string name="senha_invalida">Senha Inválida</string>
    <string name="teste">TEste</string>
    <string name="ola">Olá</string>
    <string name="acessar">Bem vindo</string>
    <string name="esqueceu_sua_senha"><u>Esqueceu sua senha?</u></string>
    <string name="registrar_se"><u>Cadastrar-se</u></string>
    <string name="erro">Erro</string>
    <string name="ocorreu_erro_comunicacao_servidor">Ocorreu um erro de comunicação com o Servidor</string>
    <string name="sem_conexao">Voce esta sem conexão com a internet</string>
    <string name="ops">Ops</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="usuarionomeexample">Paulo H. Vescovi</string>
    <string name="meu_perfil">Meu perfil</string>
    <string name="encontrar_servicos">Encontrar serviços</string>
    <string name="encontrar_produtos">Encontrar produtos</string>
    <string name="sair_do_app">Sair do App</string>
    <string name="anunciar">Anunciar</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="atencao">Atenção</string>
    <string name="deseja_sair_do_sistema">Deseja sair do App?</string>
    <string name="pesquise_aqui">Pesquise aqui...</string>
    <string name="loading_categories">Carregando Categorias</string>
</resources>
