<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <include
        layout="@layout/app_bar_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/drawerBackgroundColor"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:itemIconTint="@color/colorPrimaryDark"
        app:itemTextColor="@color/editTextTextColor">

        <View
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginTop="250dp"
            android:visibility="gone"
            style="@style/Divider"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="260dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_menu_selected"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="@+id/button_profile"
                    android:id="@+id/image_profile_selected"
                    app:layout_constraintEnd_toStartOf="@+id/button_profile"
                    app:layout_constraintTop_toTopOf="@+id/button_profile" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_profile"
                    style="@style/ButtonTransparent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/meu_perfil"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    style="@style/Divider"
                    app:layout_constraintBottom_toBottomOf="@+id/button_profile"
                    app:layout_constraintTop_toTopOf="@+id/button_services" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_menu_selected"
                    android:id="@+id/image_services_selected"
                    app:layout_constraintBottom_toBottomOf="@+id/button_services"
                    app:layout_constraintEnd_toStartOf="@+id/button_services"
                    app:layout_constraintTop_toTopOf="@+id/button_services" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_services"
                    style="@style/ButtonTransparent"
                    android:layout_marginTop="8dp"
                    android:text="@string/encontrar_servicos"
                    app:layout_constraintEnd_toEndOf="@+id/button_profile"
                    app:layout_constraintStart_toStartOf="@+id/button_profile"
                    app:layout_constraintTop_toBottomOf="@+id/button_profile" />

                <View
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    style="@style/Divider"
                    app:layout_constraintBottom_toBottomOf="@+id/button_services"
                    app:layout_constraintTop_toTopOf="@+id/button_products" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:visibility="gone"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/ic_menu_selected"
                    app:layout_constraintBottom_toBottomOf="@+id/button_products"
                    android:id="@+id/image_products_selected"
                    app:layout_constraintEnd_toStartOf="@+id/button_products"
                    app:layout_constraintTop_toTopOf="@+id/button_products" />


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_products"
                    style="@style/ButtonTransparent"
                    android:layout_marginTop="8dp"
                    android:text="@string/encontrar_produtos"
                    app:layout_constraintEnd_toEndOf="@+id/button_services"
                    app:layout_constraintStart_toStartOf="@+id/button_services"
                    app:layout_constraintTop_toBottomOf="@+id/button_services" />


                <View
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    style="@style/Divider"
                    app:layout_constraintBottom_toBottomOf="@+id/button_products"
                    app:layout_constraintTop_toTopOf="@+id/button_logout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_logout"
                    style="@style/ButtonTransparent"
                    android:layout_marginTop="8dp"
                    android:text="@string/sair_do_app"
                    app:layout_constraintEnd_toEndOf="@+id/button_products"
                    app:layout_constraintStart_toStartOf="@+id/button_products"
                    app:layout_constraintTop_toBottomOf="@+id/button_products" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </com.google.android.material.navigation.NavigationView>


</androidx.drawerlayout.widget.DrawerLayout>
